[package]
name = "tonic-types"
version = "0.2.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/tonic-types/0.2.0/tonic-types/"
repository = "https://github.com/hyperium/tonic"
homepage = "https://github.com/hyperium/tonic"
description = """
A collection of useful protobuf types that can be used with `tonic`.
"""
readme = "../README.md"
categories = ["web-programming", "network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "protobuf"]

[dependencies]
prost = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }
prost-types = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }

[build-dependencies]
prost-build = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }

