[package]
name = "stream_conflict"
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { path = "../../tonic" }
prost = { optional = true, git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }

[build-dependencies]
tonic-build = { path = "../../tonic-build" }
