[package]
name = "my_application"
version = "0.1.0"
authors = ["Danny Hua <danny@42layers.io>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { path= "../../../tonic" }
prost = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }
prost-types = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }
uuid = { package = "uuid1", path= "../uuid" }

[build-dependencies]
tonic-build = { path= "../../../tonic-build" }
