[package]
name = "uuid1"
version = "0.1.0"
authors = ["Danny Hua <danny@42layers.io>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
prost = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }

[build-dependencies]
prost-build = { git = "https://github.com/SkamDart/prost", branch = "0.7-single-include" }
